--- a/src/assets/style/vars.less
+++ b/src/assets/style/vars.less
@@ -23,6 +23,9 @@
 // fonts
 
 .adelle-semibold {
+  font-family: "Adelle Cyrillic Semibold", sans-serif;
+}
+.adelle-regular {
   font-family: "Adelle Cyrillic", sans-serif;
 }
 
@@ -47,8 +50,10 @@
 // elements
 
 h2 {
+  .adelle-regular;
   b {
     color: @textActive;
+    .adelle-semibold;
   }
 }
 
@@ -139,7 +144,7 @@ button {
   }
 
   &:hover {
-    opacity: 0.9;
+    box-shadow: 0px 5px 10px rgba(51, 51, 51, 0.25);
   }
 
   span {
@@ -169,7 +174,7 @@ button {
 .tpl {
   position: absolute;
   z-index: -22;
-  //background: url("../img/screens/mobile-form.png") no-repeat center 0px; // -1099 52 -20px 21px
+  background: url("../img/screens/mobile.png") no-repeat center 0px; // -1099 52 -20px 21px
   background-size: calc(100%);
   //background: url("../img/screens/page1440.png") no-repeat center 0px; // -1099 52 -20px 21px
   width: 100%;
